# gametheory

./: .gitignore  .pylintrc  .releaserc  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/: code_of_conduct.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
dilemma/: __init__.py  __main__.py  main.py  models.py  player.py  session.py  simulation.py  strategies.py  strategy.py  symbols.py  utils.py
pdprogram/: __init__.py  __main__.py  pdgame.py  pdplayer.py  pdsession.py  pdtypes.py  player.py  session.py  simulation.py
test/: conftest.py  test_dilemma_models.py  test_dilemma_strategies.py  test_dilemma_utility.py  test_models.py
